@@ -1,3 +1,6 @@
+ * new `MDMessageCmd` added as alternative to MDNotifyCmd. This command is called with an
+   addition "reason" parameter that specifies what happened to the manged domain. Currently
+   the only reason used is "renewed". More will come. 
  * More tests for invocations and error handling of `MDNotifyCmd`. 
  * `MDNotifyCmd` is now called for each domain that has been successfully renewed. Not for 
    all Managed Domains after all have been processed. This gives notifications earlier.
